--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,126 +1,3 @@
 .container {
   max-width: 980px;
 }
-
-/* Header */
-h1 {
-  color: #ffffff;
-}
-
-.header-nav {
-  /* background: #21252D */
-  color: #fff;
-  position: sticky;
-  top: 0;
-  z-index: 5;
-  -webkit-box-shadow: 0 2px 0 0 #333333;
-  box-shadow: 0 2px 0 0 #333333;
-  background: rgb(33, 37, 45);
-  background: linear-gradient(90deg, rgba(33,37,45,1) 0%, rgba(42,36,47,1) 100%);
-}
-
-.header-container {
-  margin: 0 auto;
-  padding: 10px 0;
-  max-width: 980px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-container__logo {
-  background-image: url("./images/Logo.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 120px;
-  height: 40px;
-}
-
-.header-container__logo:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.header-content {
-  max-width: 980px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-}
-
-.header-content__right {
-  z-index: 3;
-  max-width: 500px;
-  margin-left: auto;
-  padding: 80px 0 0;
-}
-
-.header-content__heading p {
-  color: #F6F6F6;
-  margin: 40px 0;
-  line-height: 30px;
-}
-
-.header-wave {
-  height: calc(206px + 5vw);
-  background-image: url('./images/waves.svg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.header-taxi {
-  z-index: 2;
-  position: relative;
-  margin-left: calc(20px + 7vw);
-  top: -100px;
-  height: 300px;
-  background-image: url('./images/prius.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.logo-text {
-  margin-left: 24px;
-  margin-top: 20px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.logo-text a {
-  text-decoration: none;
-  color: #F6F6F6;
-}
-
-.header-container__phone {
-  font-size: calc(10px + 1vw);
-  margin-left: 0;
-}
-
-.header-container__phone:hover {
-  cursor: pointer;
-}
-
-.phone-link {
-  background: none;
-}
-
-.phone-link:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.phone-link span {
-  display: inline-block;
-  mask-image: url("./images/incoming-call.svg");
-  mask-size: contain;
-  mask-position: center;
-  vertical-align: middle;
-}
-
-.city_background {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url('./images/city.png');
-}
